--- a/SampleCode_1211/NK_ML56SD/NK_ML56SD_LCD_TK_PD/KEIL/Nu_Link_8051_Driver.ini
+++ b/SampleCode_1211/NK_ML56SD/NK_ML56SD_LCD_TK_PD/KEIL/Nu_Link_8051_Driver.ini
@@ -1,12 +1,12 @@
 [Version]
 Nu_LinkVersion=V1.2
 [Process]
-ProcessID=0x000030f4
-ProcessCreationTime_L=0x557b2d88
-ProcessCreationTime_H=0x01d6cee5
-NuLinkID=0x18002f72
+ProcessID=0x00002390
+ProcessCreationTime_L=0xa0fe205f
+ProcessCreationTime_H=0x01d6cf6f
+NuLinkID=0x18000138
 NuLinkIDs_Count=0x00000001
-NuLinkID0=0x18002f72
+NuLinkID0=0x18000138
 NuLinkID1=0x7788f3de
 [Option]
 MaxClock=1
